# Code_Guardian

./: .gitignore  LICENSE  README.md  index.html
.github/workflows/: static.yml
Documentazione/: README.md
Documentazione/LaTeX/Analisi dei Requisiti/: Analisi dei Requisiti.tex
Documentazione/LaTeX/Glossario/: Glossario.tex
Documentazione/LaTeX/Norme di Progetto/: Norme di Progetto.tex
Documentazione/LaTeX/Piano di Progetto/: Piano di Progetto.tex
Documentazione/LaTeX/Piano di Qualifica/: Piano di Qualifica.tex
Documentazione/RTB/: Analisi dei Requisiti.aux  Analisi dei Requisiti.fdb_latexmk  Analisi dei Requisiti.fls  Analisi dei Requisiti.out  Analisi dei Requisiti.tex  Analisi dei Requisiti.toc  Glossario.aux  Glossario.fdb_latexmk  Glossario.fls  Glossario.out  Glossario.tex  Glossario.toc  Norme di Progetto.tex  Piano di Progetto.tex  README.md
Documentazione/Verbali/: README.md
Src/: README.md
Src/PoC/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
Src/PoC/examples/: golden_set.json  sprint_tasks.json
Src/PoC/examples/sample_repo/: CLAUDE.md
Src/PoC/examples/sample_repo/src/: auth.py  render.js
Src/PoC/scripts/: measure_accuracy.py
Src/PoC/src/code_guardian/: __init__.py  cli.py  config.py  errors.py  graph.py  models.py  ports.py  render.py
Src/PoC/src/code_guardian/agents/: __init__.py  _base.py  changelog_tech.py  docs_inline.py  owasp_scan.py
Src/PoC/src/code_guardian/context/: __init__.py
Src/PoC/src/code_guardian/llm/: __init__.py
Src/PoC/src/code_guardian/prompts/: changelog_tech.md  docs_inline.md  owasp_scan.md
Src/PoC/tests/: test_changelog.py  test_cli.py  test_config.py  test_docs.py  test_graph.py  test_owasp.py
Website/: generate_index.py  index.html  style.css  template.html
